[package]
name = "okaywal"
version = "0.1.0"
edition = "2021"
description = "An okay Write-Ahead Log implementation"
repository = "https://github.com/khonsulabs/okaywal"
license = "MIT OR Apache-2.0"
keywords = ["write-ahead log", "write-ahead logging", "wal"]
categories = ["databases"]
readme = "./README.md"
rust-version = "1.58"

[dependencies]
parking_lot = "0.12.1"
crc32c = "0.6.3"
watchable = "1.0.0"
fs2 = "0.4.3"
thiserror = "1.0.32"

[dev-dependencies]
tempfile = "3.3.0"
fastrand = "1.8.0"

[workspace]
members = ["benchmarks", "xtask"]
