[package]
name = "okaywal"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "An okay Write-Ahead Log implementation"
repository = "https://github.com/khonsulabs/okaywal"
keywords = ["write-ahead-log", "write-ahead-logging", "wal"]
categories = ["databases"]
readme = "./README.md"
rust-version = "1.58"

[dependencies]
parking_lot = "0.12.1"
crc32c = "0.6.3"
flume = "0.10.14"
tracing = { version = "0.1.36", optional = true }

[dev-dependencies]
tempfile = "3.3.0"
fastrand = "1.8.0"

[workspace]
members = ["benchmarks", "xtask"]

[profile.bench]
debug = true
