[package]
name = "benchmarks"
version = "0.0.0"
edition = "2021"
publish = false

[features]
sqlite = ["dep:rusqlite"]

[dependencies]
tempfile = "3.3.0"
okaywal = { path = "../" }
timings = { git = "https://github.com/khonsulabs/timings", branch = "main" }
bytesize = "1.1.0"
sharded-log = { version = "0.0.1", optional = true }
postgres = { version = "0.19.4", optional = true }
rusqlite = { version = "0.28.0", optional = true }

[[bench]]
name = "benchmarks"
harness = false
